fix: fix header menu alignment

--- a/src/app/shared/components/header/header.component.less
+++ b/src/app/shared/components/header/header.component.less
@@ -23,6 +23,7 @@
 .header__right-group {
   display: flex;
   gap: 24px;
+  align-items: center;
 }
 
 .header__logo {
@@ -46,7 +47,8 @@
 
 .header__user-menu {
   color: @background-color-light;
-  padding-top: 2px;
+  display: flex;
+  align-items: center;
 }
 
 .header__user-name {
@@ -70,6 +72,7 @@
 .header__welcome_actions {
   display: flex;
   gap: 32px;
+  align-items: center;
 }
 
 .header__welcome_actions a,
